--- a/daum-cafe-mobile-crawler-1.ipynb
+++ b/daum-cafe-mobile-crawler-1.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "inp_num = input('저장할 게시물 번호 + 엔터: ')\n",
     "\n",
-    "num = int(inp_num) #뒤에 DB에 숫자로 저장할 거니까 형변환 해줍시다. \n",
+    "num = int(inp_num) #뒤에 DB에 정수로 저장할 거니까 형변환 해줍시다. \n",
     "\n",
     "url = 'http://m.cafe.daum.net/%s/%s/%s' % (CAFE_NAME, BOARD_NAME, inp_num)\n",
     "driver.get(url) # 게시물의 주소로 이동합니다. \n",
@@ -229,14 +229,14 @@
     "        nick = ''\n",
     "\n",
     "    # 작성시간과 조회수를 찾아봅시다. \n",
-    "    # 클래스 명이 지정되어 있습니만 작성시간, 조회수 2군데에서 모두 사용되었네요. \n",
+    "    # 클래스 명이 지정되어 있습니만, \n",
+    "    # 작성시간, 조회수 2군데에서 사용되었네요. \n",
+    "    # 이런 경우는 find_all()로 작성시간과 조회수를 동시에 찾아낸 뒤 \n",
+    "    # [0], [1]로 리스트의 요소를 하나씩 뽑아내야 겠네요. \n",
     "\n",
     "    # 변수명은 html의 클래스명을 바로 따왔습니다. \n",
     "    # 프로그래머의 가장 큰 고민은 변수 이름을 짓는 것입니다.  \n",
     "    # 원본을 그대로 따라쓰면 그런 고민을 할 필요가 없어집니다. \n",
-    "\n",
-    "    # find_all()로 작성시간과 조회수를 동시에 찾아낸 뒤 \n",
-    "    # [0], [1]로 리스트의 요소를 하나씩 뽑아내야 겠네요.      \n",
     "        \n",
     "    num_subject = soup.body.find_all('span', class_='num_subject')\n",
     "    write_time = num_subject[0].get_text()\n",
@@ -245,10 +245,19 @@
     "    print(num, subject, nick, write_time, views, url)\n",
     "\n",
     "    # 본문\n",
+    "    \n",
+    "    # 본문은 친절하게 id='article' 안에 잘 들어있습니다. \n",
+    "    # 이런 경우는 id는 유일하니까 고민이 별로 없어집니다. \n",
+    "    # 바로 find로 찾으면 됩니다. \n",
     "\n",
     "    contents = soup.body.find('div', id='article').get_text('\\n', strip=True)\n",
     "    print(contents)\n",
     "\n",
+    "    \n",
+    "    # 위에서 사용했던 변수들을 모아서 DB에 넣어줍니다.\n",
+    "    # DB에 관한 설명은 별도로 하지 않겠습니다.  \n",
+    "    # 제가 첫 시간에 알려드렸던 사이트들을 보시면 될 것 같습니다. \n",
+    "    \n",
     "    conn = sqlite3.connect(DB)\n",
     "    cur = conn.cursor()\n",
     "    sql = \"replace into %s(num,subject,nick,write_time,views,url,contents) values (?,?,?,?,?,?,?)\" % BOARD_NAME\n",
@@ -263,7 +272,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.close()"
+    "driver.close()\n",
+    "# 열었던 브라우저를 닫아줍니다. "
    ]
   },
   {
@@ -290,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
