--- a/daum-cafe-mobile-crawler-1.ipynb
+++ b/daum-cafe-mobile-crawler-1.ipynb
@@ -234,9 +234,10 @@
     "    # 이런 경우는 find_all()로 작성시간과 조회수를 동시에 찾아낸 뒤 \n",
     "    # [0], [1]로 리스트의 요소를 하나씩 뽑아내야 겠네요. \n",
     "\n",
-    "    # 변수명은 html의 클래스명을 바로 따왔습니다. \n",
-    "    # 프로그래머의 가장 큰 고민은 변수 이름을 짓는 것입니다.  \n",
-    "    # 원본을 그대로 따라쓰면 그런 고민을 할 필요가 없어집니다. \n",
+    "    # num_subject라는 변수명은 해당 노드의 클래스명에서 따왔습니다. \n",
+    "    # 프로그래머의 가장 큰 고민은 변수 이름을 짓는 것이라고 합니다.  \n",
+    "    # 원본을 그대로 쓰면 그런 고민을 할 필요가 없어집니다. \n",
+    "    # 하지만 .... 직관적이지 않은 변수명 같습니다...\n",
     "        \n",
     "    num_subject = soup.body.find_all('span', class_='num_subject')\n",
     "    write_time = num_subject[0].get_text()\n",
