--- a/daum-cafe-mobile-crawler-1.ipynb
+++ b/daum-cafe-mobile-crawler-1.ipynb
@@ -35,7 +35,7 @@
     "driver = webdriver.Chrome('C:/PyApp/driver/chromedriver')\n",
     "# 설치 폴더에 주의합니다. \n",
     "\n",
-    "driver.get('https://logins.daum.net/accounts/loginform.do?mobilefull=1&category=cafe&url=http%3A%2F%2Fm.cafe.daum.net%2F_myCafe%3Fnull')\n",
+    "driver.get('https://logins.daum.net/accounts/signinform.do?url=https%3A%2F%2Fm.daum.net')\n",
     "\n",
     "time.sleep(5)\n",
     "# 페이지 전환시에는 적당한 시간을 줍니다. \n",
