--- a/daum-cafe-mobile-crawler-2.ipynb
+++ b/daum-cafe-mobile-crawler-2.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome('C:/PyApp/driver/chromedriver')\n",
-    "driver.get('https://logins.daum.net/accounts/loginform.do?mobilefull=1&category=cafe&url=http%3A%2F%2Fm.cafe.daum.net%2F_myCafe%3Fnull')\n",
+    "driver.get('https://logins.daum.net/accounts/signinform.do?url=https%3A%2F%2Fm.daum.net')\n",
     "time.sleep(5)"
    ]
   },
